# matura-z-informatyki

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: CI.yaml
cke/: 58_systemy_liczbowe.cpp  59_ciekawe_liczby.cpp  60_dzielniki.cpp  61_ciągi_arytmetyczne.cpp  62_liczby_ósemkowe.cpp  63_ciągi_zerojedynkowe.cpp  64_obrazki.cpp  65_ułamki.cpp  66_trójki_liczb.cpp  67_binarny_fraktal_fibonacciego.cpp  68_napis_anagramy.cpp  69_geny.cpp  70_zasłona.cpp  71_funkcja.cpp  72_podobne_napisy.cpp  73_statystyki_tekstu.cpp  74_hasła.cpp  75_szyfr_afiniczny.cpp  76_szyfr.cpp  77_szyfr_vigenèrea.cpp  78_podpis_elektroniczny.cpp  79_okręgi.cpp  80_trójkąty.cpp  81_czworokąt.cpp  CMakeLists.txt
matura/: CMakeLists.txt
matura/2015_formula/: 2015_liczby_binarne.cpp  2016_szyfr_cezara.cpp  2017_piksele.cpp  CMakeLists.txt
matura/old_formula/: 2009_para_słów.cpp  2010_anagram.cpp  2011_liczby_inaczej.cpp  2012_szyfr.cpp  2013_liczby.cpp  2014_ciekawe_napisy.cpp  2015_słowa_binarne.cpp  2016_gra_w_życie.cpp  2017_ciągi_binarne.cpp  CMakeLists.txt
