cmake_minimum_required(VERSION 3.10)

project("Zbiór zadań CKE - rozwiązania")
set(CMAKE_CXX_STANDARD 17)

add_executable(systemy_liczbowe 58_systemy_liczbowe.cpp)
add_executable(ciekawe_liczby 59_ciekawe_liczby.cpp)
add_executable(dzielniki 60_dzielniki.cpp)
add_executable(ciagi_arytmetyczne 61_ciągi_arytmetyczne.cpp)
add_executable(liczby_osemkowe 62_liczby_ósemkowe.cpp)
add_executable(ciagi_zerojedynkowe 63_ciągi_zerojedynkowe.cpp)
add_executable(obrazki 64_obrazki.cpp)
add_executable(ulamki 65_ułamki.cpp)
add_executable(trojki_liczb 66_trójki_liczb.cpp)
add_executable(binarny_fraktal_fibonacciego 67_binarny_fraktal_fibonacciego.cpp)
add_executable(napis_anagramy 68_napis_anagramy.cpp)
add_executable(geny 69_geny.cpp)
add_executable(zaslona 70_zasłona.cpp)
add_executable(funkcja 71_funkcja.cpp)
add_executable(podobne_napisy 72_podobne_napisy.cpp)
add_executable(statystyki_tekstu 73_statystyki_tekstu.cpp)
add_executable(hasla 74_hasła.cpp)
add_executable(szyfr_afiniczny 75_szyfr_afiniczny.cpp)
add_executable(szyfr 76_szyfr.cpp)
add_executable(szyfr_vigenerea 77_szyfr_vigenèrea.cpp)
add_executable(podpis_elektroniczny 78_podpis_elektroniczny.cpp)
add_executable(okregi 79_okręgi.cpp)
add_executable(trojkaty 80_trójkąty.cpp)
add_executable(czworokat 81_czworokąt.cpp)
