add_executable(para_slow 2009_para_słów.cpp)
add_executable(anagram 2010_anagram.cpp)
add_executable(liczby_inaczej 2011_liczby_inaczej.cpp)
add_executable(szyfr 2012_szyfr.cpp)
add_executable(liczby 2013_liczby.cpp)
add_executable(ciekawe_napisy 2014_ciekawe_napisy.cpp)
add_executable(slowa_binarne 2015_słowa_binarne.cpp)
add_executable(gra_w_zycie 2016_gra_w_życie.cpp)
add_executable(ciagi_binarne 2017_ciągi_binarne.cpp)